--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,8 +11,8 @@ spring.datasource.username=${DATASOURCE_USERNAME}
 spring.datasource.password=${DATASOURCE_PASSWORD}
 
 # H2 Console
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2
+# spring.h2.console.enabled=true
+# spring.h2.console.path=/h2
 
 # JPA
 # spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
