--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,24 +1,24 @@
 
 # DATASOURCE
-# spring.datasource.url=jdbc:h2:file:./data/bd_ourlocal
-# spring.datasource.driverClassName=org.h2.Driver
-# spring.datasource.username=sa
-# spring.datasource.password=password
+spring.datasource.url=jdbc:h2:file:./data/bd_ourlocal
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
 
-spring.datasource.url=${DATASOURCE_URL}
-spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.username=${DATASOURCE_USERNAME}
-spring.datasource.password=${DATASOURCE_PASSWORD}
+# spring.datasource.url=${DATASOURCE_URL}
+# spring.datasource.driverClassName=org.postgresql.Driver
+# spring.datasource.username=${DATASOURCE_USERNAME}
+# spring.datasource.password=${DATASOURCE_PASSWORD}
 
 # H2 Console
-# spring.h2.console.enabled=true
-# spring.h2.console.path=/h2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
 
 # JPA
-# spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-# spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
 
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.generate-ddl=true
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+# spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+# spring.jpa.generate-ddl=true
+# spring.jpa.show-sql=true
+# spring.jpa.hibernate.ddl-auto=create
